[package]
name = "memdb"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/memdb"
documentation = "https://docs.rs/memdb"
description = "Thread-safe in-memory key-value store"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
parking_lot = "0.8.0"

[dev-dependencies]
runtime = "0.3.0-alpha.4"
